[Mobile] fix link and modal z-index

--- a/src/components/ContentColumn/Article.module.css
+++ b/src/components/ContentColumn/Article.module.css
@@ -71,7 +71,7 @@
   color: #013047;
   opacity: 0.6;
   position: relative;
-  z-index: -1;
+  z-index: 0;
 }
 
 .projectAbout {
@@ -82,7 +82,7 @@
   display: flex;
 
   gap: 4px;
-  width: calc(100% - 24px);
+  width: 100%;
   overflow: scroll;
   margin-bottom: 6px;
 }
@@ -106,4 +106,5 @@
 .caption {
   font-size: 13px;
   font-style: italic;
+  width: calc(100% - 24px);
 }
